[package]
name = "ner-wasm"
version = "0.1.0"
authors = ["ujiuji1259 <suzzz428@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.52"
wasm-bindgen = "0.2.74"
console_error_panic_hook = "0.1.6"
crfs = "0.1.3"
serde = "1.0.127"

[dependencies.sudachi]
path = "/Users/ujiie/sudachi.rs"

